--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>iOS Keyboard Fix with Scroll & Bottom Space</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 </head>
-<body>
+<body style="background:red">
   <header>차감 신청</header>
   <div class="wrap">
     <p>키보드가 열릴 때 아래 버튼이 가려지지 않고, 빈 공간 없이 스크롤 되어야 합니다.</p>
@@ -16,5 +16,6 @@
   <div class="btn-floating-sticky">하단 고정 버튼</div>
 </body>
 </html>
+
 
 
