--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" placeholder="텍스트 입력 2" />
     <input type="text" placeholder="텍스트 입력 3" />
   </div>
-  <div class="btn-floating-sticky">하단 고정 버튼</div>
+  <div class="btn-floating-sticky" style="position:fixed;bottom: 0;left: 0;right: 0;height: 50px;background-color: green;">하단 고정 버튼</div>
 </body>
 </html>
 
