--- a/index.html
+++ b/index.html
@@ -4,8 +4,47 @@
   <meta charset="UTF-8" />
   <title>iOS Keyboard Fix with Scroll & Bottom Space</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <style>
+    body {
+      margin: 0;
+      background: red;
+      font-family: sans-serif;
+    }
+    header {
+      padding: 1rem;
+      background: #fff;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+    .wrap {
+      padding: 1rem;
+      padding-bottom: 80px; /* keep space for sticky button */
+    }
+    input {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      font-size: 16px;
+    }
+    .btn-sticky {
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 50px;
+      background-color: green;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 100;
+      transition: bottom 0.2s;
+    }
+  </style>
 </head>
-<body style="background:red">
+<body>
   <header>차감 신청</header>
   <div class="wrap">
     <p>키보드가 열릴 때 아래 버튼이 가려지지 않고, 빈 공간 없이 스크롤 되어야 합니다.</p>
@@ -13,9 +52,25 @@
     <input type="text" placeholder="텍스트 입력 2" />
     <input type="text" placeholder="텍스트 입력 3" />
   </div>
-  <div class="btn-floating-sticky" style="position:fixed;bottom: 0;left: 0;right: 0;height: 50px;background-color: green;">하단 고정 버튼</div>
+  <div class="btn-sticky">하단 고정 버튼</div>
+
+  <script>
+    const btn = document.querySelector('.btn-sticky');
+
+    function updateBtnPosition() {
+      const vv = window.visualViewport;
+      if (!vv) return;
+
+      // Calculate bottom offset so button sticks to visual viewport bottom
+      const offset = window.innerHeight - vv.height - vv.offsetTop;
+      btn.style.bottom = offset + 'px';
+    }
+
+    if (window.visualViewport) {
+      window.visualViewport.addEventListener('resize', updateBtnPosition);
+      window.visualViewport.addEventListener('scroll', updateBtnPosition);
+      updateBtnPosition();
+    }
+  </script>
 </body>
 </html>
-
-
-
