--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" style="max-height:calc(100vh - 300px);background-color: green;">
+<html lang="ko" style="background-color: red;">
 <head>
   <meta charset="UTF-8" />
   <title>iOS Keyboard Fix with Scroll & Bottom Space</title>
