--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>iOS Keyboard Fix with Scroll & Bottom Space</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, interactive-widget=resizes-content">
 </head>
 <body>
   <header>차감 신청</header>
