--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>iOS Keyboard Fix with Scroll & Bottom Space</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <style>
-html, body {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
-
+html {
+  height: -webkit-fill-available;
+}
 
   </style>
 </head>
