--- a/index.html
+++ b/index.html
@@ -5,22 +5,38 @@
   <title>iOS Keyboard Fix with Scroll & Bottom Space</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <style>
-body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-}
 html {
-  height: -webkit-fill-available;
+    height : 100vh;
+    width : 100vw;
 }
-
   </style>
+  <script>
+
+$(function() {    
+    if (/ipad|iphone/gi.test(window.navigator.userAgent)) {
+    var events = "abort blur focus input scroll submit touchstart touchmove";
+    $("form, input").on(events, function(e) {
+return (function(window, elem, w, h) {
+var vh = window.getComputedStyle(elem,null).getPropertyValue(h);
+var vw = window.getComputedStyle(elem,null).getPropertyValue(w);
+    var vwh = {"documentWidth": vw, "documentHeight": vh, "windowInnerWidth": window.innerWidth, "windowInnerHeight": window.innerHeight};
+console.log(vwh);
+var _vwh = document.getElementById("vwh");
+    _vwh.innerHTML = JSON.stringify(vwh)
+return vwh  
+}(window, document.documentElement, "width", "height"));
+    }).focus();
+    };
+})
+
+  </script>
 </head>
 <body>
-  <header>차감 신청</header>
-  <div class="wrap" style="height: 200px;">
-    <p>키보드가 열릴 때 아래 버튼이 가려지지 않고, 빈 공간 없이 스크롤 되어야 합니다.</p>
-    <input type="text" placeholder="텍스트 입력 1" />
-  </div>
+  <form>
+    <input type="text" />
+</form>
+<input type="text" />
+<div id="vwh"></div>
   <div class="btn-floating-sticky" style="position:fixed;bottom: 0;left: 0;right: 0;height: 50px;background-color: green;">하단 고정 버튼</div>
 </body>
 </html>
