--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>iOS Keyboard Fix with Scroll & Bottom Space</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, interactive-widget=resizes-content">
   <style>
-html {
-    height : 100vh;
-    width : 100vw;
-}
+
   </style>
   <script>
 
@@ -32,11 +29,11 @@ return vwh
   </script>
 </head>
 <body>
-  <form>
-    <input type="text" />
-</form>
-<input type="text" />
-<div id="vwh"></div>
+  <header>차감 신청</header>
+  <div class="wrap" style="height: 200px;">
+    <p>키보드가 열릴 때 아래 버튼이 가려지지 않고, 빈 공간 없이 스크롤 되어야 합니다.</p>
+    <input type="text" placeholder="텍스트 입력 1" />
+  </div>
   <div class="btn-floating-sticky" style="position:fixed;bottom: 0;left: 0;right: 0;height: 50px;background-color: green;">하단 고정 버튼</div>
 </body>
 </html>
