--- a/index.html
+++ b/index.html
@@ -26,28 +26,24 @@ body {
 .fixfixed .footer { 
     position: absolute; 
 } 
-
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+}
     </style>
-    <script>
-/* we need this only on touch devices */
-$(function() {
-      var $body;
-      if (Modernizr.touch) {
-        $body = $("body");
-        document.addEventListener('focusin', function() {
-          return $body.addClass("fixfixed");
-        });
-        return document.addEventListener('focusout', function() {
-          $body.removeClass("fixfixed");
-          return setTimeout(function() {
-            return $(window).scrollLeft(0);
-          }, 20);
-        });
-      }
-    });
 
-
-    </script>
     <body>
         <div class="header">Header</div>
         <div class="container">
