--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@ time, mark, audio, video {
     </style>
 
     <body>
-        <div class="header">Header</div>
         <div class="container">
             <form action="">
-                <label>Testfield: <input type="text" /></label>
+                <label>Testfield: <input type="text" style="height: 60px;background-color: red;"/></label>
             </form>
         </div>
         <div class="footer">Footer</div>
